<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:showDividers="beginning">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/SubLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textContent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textcontent"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/SubLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal" >

            <TextView
                android:id="@+id/textDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>